style: apply more openrewrite recipes